src/objects/TxnChargeToTaxMapping__c.object
<CustomObject>
    <description>This object contains the mapping records for Type and Subtype and their taxes and service charges.</description>
    <fields>
        <fullName>Allow_in_POS__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Allow in POS</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ChargeSubType__c</fullName>
        <description>sub type of the charge</description>
        <label>SubType</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ChargeType__c</fullName>
        <description>type is based on the charge.</description>
        <label>Type</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Charge__c</fullName>
        <description>charge - comes from the txn object.</description>
        <label>Record Type</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>If_Taxes_Are_Applicable__c</fullName>
        <defaultValue>false</defaultValue>
        <label>If Taxes Are Applicable</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Service_Charge_Name__c</fullName>
        <label>Service Charge Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Service_Charge_applicable__c</fullName>
        <defaultValue>false</defaultValue>
        <description>if service charge is applicable then true.</description>
        <label>Service _Charge_applicable</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Subtype__c</fullName>
        <description>global subtype picklist value</description>
        <globalPicklist>SubType</globalPicklist>
        <label>Subtype</label>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>TaxId__c</fullName>
        <description>tax id this is coming from customer setting and setting name taxes.</description>
        <label>TaxId</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Tax_Name_applicable_on_service_charge__c</fullName>
        <description>Name of the Tax to applied on Service Charge</description>
        <label>Tax_Name_applicable_on_service_charge</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Taxes_applicable_on_service_charge__c</fullName>
        <defaultValue>false</defaultValue>
        <description>if this is checked then the selected taxes will also apply on the service charge.</description>
        <label>Taxes_applicable_on_service_charge</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <description>global type picklist field</description>
        <globalPicklist>Type</globalPicklist>
        <label>Type</label>
        <required>true</required>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>tax_on_service_charge__c</fullName>
        <description>if tax on service charge is applicable then this field will contain the tax id which is applicable</description>
        <label>tax_on_service_charge</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <label>TxnChargeToTaxMapping</label>
    <listViews>
        <fullName>All</fullName>
        <columns>OBJECT_ID</columns>
        <columns>NAME</columns>
        <columns>Type__c</columns>
        <columns>Subtype__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>ctot-{000000}</displayFormat>
        <label>TxnChargeToTaxMapping Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>TxnChargeToTaxMappings</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>